# STE2021

IWOMP19/Compiler/: iwomp19.txt
IWOMP19/Compiler/llvm-install/include/: ompuseclause.h
IWOMP19/Compiler/llvm/tools/clang/runtime/check-rt/: CMakeLists.txt  DebugInfo.h  MemoryProfiling.cpp  MemoryProfiling.h  check-rt.cpp  check-rt.h
IWOMP19/Compiler/llvm/tools/clang/tools/dp-checker/: BracesAroundStatementsCheck.cpp  BracesAroundStatementsCheck.h  BracesFixerASTFrontendAction.cpp  BracesFixerASTFrontendAction.h  CMakeLists.txt  CallSite.h  CheckerTool.cpp  CheckerTool.h  LoopASTFrontendAction.cpp  LoopASTFrontendAction.h  PostLoopASTFrontendAction.cpp  PostLoopASTFrontendAction.h  tool.cpp
IWOMP19/Runtime/src/: kmp.h  kmp_runtime.c
IWOMP19/Runtime/tmp/lin_32e-rtl_5_nor_dyn.rel.45.c0.s0....h0-juan-pc-asus/: ignore_handler_s.d  iomp_lib.h  ittnotify_static.d  kmp_affinity.d  kmp_alloc.d  kmp_atomic.d  kmp_barrier.d  kmp_cancel.d  kmp_csupport.d  kmp_debug.d  kmp_debugger.d  kmp_dispatch.d  kmp_environment.d  kmp_error.d  kmp_ftn_cdecl.d  kmp_ftn_extra.d  kmp_global.d  kmp_gsupport.d  kmp_i18n.d  kmp_i18n_id.inc  kmp_io.d  kmp_itt.d  kmp_lock.d  kmp_runtime.d  kmp_sched.d  kmp_settings.d  kmp_str.d  kmp_taskdeps.d  kmp_tasking.d  kmp_taskq.d  kmp_threadprivate.d  kmp_utility.d  kmp_version.d  kmp_wait_release.d  mem_primitives_lib.d  memcpy_s.d  omp_lib.f  omp_lib.h  safe_mem_constraint.d  safe_str_constraint.d  (+6 more)
IWOMP21/Benchmarks/mcf/mcf_STL/: Makefile.defaults  Makefile.spec  mcf  mcf.c  pbeampp.c
IWOMP21/Benchmarks/mcf/mcf_ordered/: Makefile.spec  mcf  pbeampp.c
IWOMP21/Benchmarks/mcf/mcf_serial/: Makefile.spec  mcf  pbeampp.c
IWOMP21/Runtimes/libomp12/: iwomp21.txt
SBAC18/Benchmarks/: .gitignore
SBAC18/Benchmarks/KS/: KS-2.c  Makefile  doacross.h
SBAC18/Benchmarks/StarBench/: .gitignore
SBAC18/Benchmarks/cBench/: .gitignore
SBAC18/Benchmarks/utils/: Makefile  teste.c  timer.c  timer.h
(+491 files in other folders)
